small text changes + google font debugging

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Mini Pong Pigalle</title>
     <meta name="description" content="Mini Pong Pigalle, bar à cocktails, 64 rue Jean-Baptiste Pigalle, 75009 Paris, Mo Pigalle. Ancien bar à filles, nouveau bar de copains.">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Kalam:300,400|Open+Sans:400,300,700|Raleway:300,400,500,700">
+    <link href="http://fonts.googleapis.com/css?family=Kalam:300,400|Open+Sans:400,300,700|Raleway:300,400,500,700" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
@@ -46,19 +46,18 @@
       <img class="paragraphe" src="images/paragraphe.png" alt="">
       <p>
         Ouvert du lundi au samedi<br>
-        de 18h à 2h<br>
-        Le Dimanche de 18h à minuit
+        de 18h à 2h
       </p>
       <img class="paragraphe" src="images/paragraphe.png" alt="">
       <p>
-        Ancien bar à filles<br>
-        Nouveau bar de copains
+        "Un bar bandant en résumé" <a href="https://www.timeout.fr/paris/le-blog/le-mini-pong-le-nouveau-bar-a-cocktails-de-pigalle-quil-faut-tester-090115">Time Out</a><br>
+        "Ambiance Palm Beach années 60" Metropolitan
       </p>
       <img class="paragraphe" src="images/paragraphe.png" alt="">
       <p id="reservation">
         Réservation gratuite et réduction pour les groupes<br>
         Contactez-nous au 06 68 02 80 38<br>
-        ou par mail <a href="mailto:pileoufacepigalle@gmail.com">pileoufacepigalle@gmail.com</a>
+        ou par mail <a href="mailto:">xxxxx@gmail.com</a>
       </p>
       <p>
         N’hésitez pas à nous contacter pour toute demande<br>
