--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Mini Pong Pigalle</title>
     <meta name="description" content="Mini Pong Pigalle, bar à cocktails, 64 rue Jean-Baptiste Pigalle, 75009 Paris, Mo Pigalle. Ancien bar à filles, nouveau bar de copains.">
-    <link href="http://fonts.googleapis.com/css?family=Kalam:300,400|Open+Sans:400,300,700|Raleway:300,400,500,700" rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kalam:300,400|Open+Sans:400,300,700|Raleway:300,400,500,700" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
