--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </p>
       <img class="paragraphe" src="images/paragraphe.png" alt="">
       <p>
+        Bar à cocktails festif<br>
         "Un bar bandant en résumé" <a href="https://www.timeout.fr/paris/le-blog/le-mini-pong-le-nouveau-bar-a-cocktails-de-pigalle-quil-faut-tester-090115">Time Out</a><br>
         "Ambiance Palm Beach années 60" Metropolitan
       </p>
