font family => Raleway and email added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Mini Pong Pigalle</title>
     <meta name="description" content="Mini Pong Pigalle, bar à cocktails, 64 rue Jean-Baptiste Pigalle, 75009 Paris, Mo Pigalle. Ancien bar à filles, nouveau bar de copains.">
-    <link href="https://fonts.googleapis.com/css?family=Kalam:300,400|Open+Sans:400,300,700|Raleway:300,400,500,700" rel="stylesheet" type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700" rel="stylesheet" type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
@@ -58,7 +58,7 @@
       <p id="reservation">
         Réservation gratuite et réduction pour les groupes<br>
         Contactez-nous au 06 68 02 80 38<br>
-        ou par mail <a href="mailto:">xxxxx@gmail.com</a>
+        ou par mail <a href="mailto:minipongbar@gmail.com">minipongbar@gmail.com</a>
       </p>
       <p>
         N’hésitez pas à nous contacter pour toute demande<br>
