Google Analytics, FB card, Meta done

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Facebook Card -->
-    <meta property="og:title" content="Pile ou Face Pigalle - Bar à Cocktails">
-    <meta property="og:image" content="images/pileouface.jpg">
-    <meta property="og:description" content="Pile ou Face, ancien bar à filles, nouveau bar de copains">
-    <meta property="og:site_name" content="Pile ou Face Pigalle"/>
+    <meta property="og:title" content="MiniPong Bar Pigalle - Bar à Cocktails">
+    <meta property="og:image" content="images/MiniPong.jpg">
+    <meta property="og:description" content="MiniPong Bar, Bar à cocktails festif">
+    <meta property="og:site_name" content="MiniPong Bar Pigalle"/>
 
 
     <title>Mini Pong Pigalle</title>
-    <meta name="description" content="Mini Pong Pigalle, bar à cocktails, 64 rue Jean-Baptiste Pigalle, 75009 Paris, Mo Pigalle. Ancien bar à filles, nouveau bar de copains.">
+    <meta name="description" content="Mini Pong Pigalle, bar à cocktails, 64 rue Jean-Baptiste Pigalle, 75009 Paris, Mo Pigalle. Bar à cocktails festif.">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:300,400,500,700" rel="stylesheet" type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -28,7 +28,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-XXXXXXXX-X', 'auto');
+      ga('create', 'UA-94007747-1', 'auto');
       ga('send', 'pageview');
 
     </script>
