alt images modified and link to RPR modified

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div class="banner text-center">
-      <img id="logo" src="images/logo MP.png" alt="Pile ou Face Pigalle">
+      <img id="logo" src="images/logo MP.png" alt="MiniPong Bar">
     </div>
     <div class="text-center">
       <p>
@@ -75,7 +75,7 @@
       <p>
         Nos autres lieux :<br>
         <a href="http://pileoufacepigalle.com/">Pile ou Face Pigalle</a><br>
-        <a href="#">RPR le repaire de Charonne</a><br>
+        <a href="http://lerepairedecharonne.com">RPR le repaire de Charonne</a><br>
       </p>
     </div>
     <div class="footer">
