--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Facebook Card -->
     <meta property="og:title" content="MiniPong Bar Pigalle - Bar à Cocktails">
-    <meta property="og:image" content="images/MiniPong.jpg">
+    <meta property="og:image" content="img/minipong_2.jpg">
     <meta property="og:description" content="MiniPong Bar, Bar à cocktails festif">
     <meta property="og:site_name" content="MiniPong Bar Pigalle"/>
 
@@ -22,6 +22,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="./slick/slick.css">
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -32,10 +34,56 @@
       ga('send', 'pageview');
 
     </script>
+    <style type="text/css">
+      html, body {
+        margin: 0;
+        padding: 0;
+      }
+
+      * {
+        box-sizing: border-box;
+      }
+
+      .slider {
+          width: 50%;
+          margin: 30px auto;
+      }
+      @media only screen and (max-width: 500px) {
+        .slider {
+          width: 90%;
+        }
+      }
+      .slick-slide {
+        margin: 0px 20px;
+      }
+
+      .slick-slide img {
+        width: 100%;
+      }
+
+      .slick-prev:before,
+      .slick-next:before {
+        color: white;
+      }
+
+
+      .slick-slide {
+        transition: all ease-in-out .3s;
+        opacity: .2;
+      }
+
+      .slick-active {
+        opacity: .5;
+      }
+
+      .slick-current {
+        opacity: 1;
+      }
+    </style>
   </head>
   <body>
     <div class="banner text-center">
-      <img id="logo" src="images/logo MP.png" alt="MiniPong Bar">
+      <img id="logo" src="img/logo MP.png" alt="MiniPong Bar">
     </div>
     <div class="text-center">
       <p>
@@ -43,18 +91,18 @@
         75009 Paris<br>
         Métro Pigalle
       </p>
-      <img class="paragraphe" src="images/paragraphe.png" alt="">
+      <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
         Ouvert du lundi au samedi<br>
         de 18h à 2h
       </p>
-      <img class="paragraphe" src="images/paragraphe.png" alt="">
+      <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
         Bar à cocktails festif<br>
         « Un bar bandant en résumé » <a href="https://www.timeout.fr/paris/le-blog/le-mini-pong-le-nouveau-bar-a-cocktails-de-pigalle-quil-faut-tester-090115">Time Out</a><br>
         « Ambiance Palm Beach années 60 » Metropolitan
       </p>
-      <img class="paragraphe" src="images/paragraphe.png" alt="">
+      <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p id="reservation">
         Réservation gratuite et réduction pour les groupes<br>
         Contactez-nous au 06 68 02 80 38<br>
@@ -65,13 +113,36 @@
         Privatisation, tournage, initiation aux cocktails,<br>
         Enterrement de vie de jeune fille
       </p>
-      <img class ="text-center" id="vitrine" src="images/MiniPong.jpg" alt="photo de salon du Mini Pong pigalle - (photo Cyril Marcilhacy)">
+      <section class="lazy slider" data-sizes="50vw">
+        <div>
+          <img src="img/minipong_1.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <img src="img/minipong_2.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <img src="img/minipong_3.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <img src="img/minipong_4.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <img src="img/minipong_5.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <img src="img/minipong_6.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <img src="img/minipong_7.jpg" data-sizes="100vw">
+        </div>
+      </section>
+
       <p>
         Suivez-nous sur<br>
         <a href="https://www.facebook.com/minipongbar/", target="_blank">facebook</a><br>
         <a href="https://www.instagram.com/minipongbar/", target="_blank">instagram</a>
       </p>
-      <img class="paragraphe" src="images/paragraphe.png" alt="">
+      <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
         Nos autres lieux :<br>
         <a href="http://pileoufacepigalle.com/">Pile ou Face Pigalle</a><br>
@@ -81,5 +152,21 @@
     <div class="footer">
       Made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="http://www.fredericwibaux.com", target="_blank">fredericwibaux.com</a>
     </div>
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+  <script src="./slick/slick.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">
+    $(document).on('ready', function() {
+      $(".lazy").slick({
+        dots: true,
+        lazyLoad: 'ondemand', // ondemand progressive anticipated
+        infinite: true,
+        autoplay: true,
+        autoplaySpeed: 2000,
+        fade:true,
+        speed:500,
+        cssEase: 'linear',
+      });
+    });
+</script>
   </body>
 </html>
