added link to drinks menu in slider and body

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       }
       @media only screen and (max-width: 500px) {
         .slider {
-          width: 90%;
+          width: 100%;
         }
       }
       .slick-slide {
@@ -113,6 +113,8 @@
         Privatisation, tournage, initiation aux cocktails,<br>
         Enterrement de vie de jeune fille
       </p>
+      <br>
+      <p>Télécharger notre carte <a target="_blank" href="https://drive.google.com/file/d/1AcMUnO1aZAU-WLUZ7vZKmRWe_g_IEs_A/view?usp=sharing">ici</a></p>
       <section class="lazy slider" data-sizes="50vw">
         <div>
           <img src="img/minipong_1.jpg" data-sizes="100vw">
@@ -134,6 +136,9 @@
         </div>
         <div>
           <img src="img/minipong_7.jpg" data-sizes="100vw">
+        </div>
+        <div>
+          <a target="_blank" href="https://drive.google.com/file/d/1AcMUnO1aZAU-WLUZ7vZKmRWe_g_IEs_A/view?usp=sharing"><img src="img/minipong_carte-slider.png" data-sizes="100vw"></a>
         </div>
       </section>
 
