opening hours updated

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </p>
       <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
-        Ouvert du lundi au samedi<br>
+        Ouvert du mardi au samedi<br>
         de 18h à 2h
       </p>
       <img class="paragraphe" src="img/paragraphe.png" alt="">
