added btn to book

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
       <p id="reservation">
         Réservation gratuite et réduction pour les groupes<br>
         Contactez-nous au 06 68 02 80 38<br>
-        ou par mail <a href="mailto:minipongbar@gmail.com">minipongbar@gmail.com</a>
+        ou par mail <a href="mailto:minipongbar@gmail.com">minipongbar@gmail.com</a><br>
+        <a href="https://app.bookingshake.com/calreservation/-LWS8PXqxFVoPvrnZcgp/widget" target="_blank"><button class="button btn-danger btn-lg" aria-pressed="true">Réserver</button></a>
+
       </p>
       <p>
         N’hésitez pas à nous contacter pour toute demande<br>
