--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         Réservation gratuite et réduction pour les groupes<br>
         Contactez-nous au 06 68 02 80 38<br>
         ou par mail <a href="mailto:minipongbar@gmail.com">minipongbar@gmail.com</a><br>
-        <a href="https://app.bookingshake.com/calreservation/-LWS8PXqxFVoPvrnZcgp/widget" target="_blank"><button class="button btn-danger btn-lg" aria-pressed="true">Réserver</button></a>
+        <a href="https://app.bookingshake.com/calreservation/-LWS8PXqxFVoPvrnZcgp/widget" target="_blank"><button class="btn btn-danger btn-lg" aria-pressed="true">Réserver</button></a>
 
       </p>
       <p>
