updated opening hours

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
       </p>
       <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
-        Ouvert du mardi au samedi<br>
-        de 18h à 2h
+        Ouvert du mardi au jeudi<br>
+        de 18h à 2h <br>
+        Et vendredi et samedi <br>
+        de 19h à 4h
       </p>
       <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
