added link to Gmaps to address + css improvment to link address

--- a/index.html
+++ b/index.html
@@ -86,11 +86,14 @@
       <img id="logo" src="img/logo MP.png" alt="MiniPong Bar">
     </div>
     <div class="text-center">
-      <p>
-        64 rue Jean-Baptiste Pigalle<br>
-        75009 Paris<br>
-        Métro Pigalle
-      </p>
+      <div id="address">
+        <p>
+          <a  target="_blank" href="https://www.google.com/maps/search/?api=1&query=mini+pong+pigalle">64 rue Jean-Baptiste Pigalle<br>
+          75009 Paris<br>
+          Métro Pigalle
+          </a>
+        </p>
+      </div>
       <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
         Ouvert du mardi au jeudi<br>
@@ -101,7 +104,7 @@
       <img class="paragraphe" src="img/paragraphe.png" alt="">
       <p>
         Bar à cocktails festif<br>
-        « Un bar bandant en résumé » <a href="https://www.timeout.fr/paris/le-blog/le-mini-pong-le-nouveau-bar-a-cocktails-de-pigalle-quil-faut-tester-090115">Time Out</a><br>
+        « Un bar bandant en résumé » <a target="_blank" href="https://www.timeout.fr/paris/le-blog/le-mini-pong-le-nouveau-bar-a-cocktails-de-pigalle-quil-faut-tester-090115">Time Out</a><br>
         « Ambiance Palm Beach années 60 » Metropolitan
       </p>
       <img class="paragraphe" src="img/paragraphe.png" alt="">
